--- a/help.kz.html
+++ b/help.kz.html
@@ -108,7 +108,7 @@
               <img src="assets/img/vetqyzmet_icon_about.svg" class="logo_forms2">
               <h5><b>Байланыс</b></h5>
                 <div class="col-md-7">
-                  <p>«АШЖБ» АЖ, «Процессингтік орталық», «VetMonitoring» («VetLab» »Ветеринариялық санитариялық сараптама») жұмыс мәселелері бойынша Сіз жүгіне аласыз:
+                  <p>«Ауыл шаруашылығы жануарларын бiрдейлендiру» (АШЖБ) АЖ, «Процессингтік орталық», «VetMonitoring» («VetLab» »Ветеринариялық санитариялық сараптама») жұмыс мәселелері бойынша Сіз жүгіне аласыз:
                   </p>
                   <ul class="list">
                     <li><b>Call-центрге: 8(7172)79-34-19, +7 771 996 1499 (Whatsapp)</b></li>
