--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <a class ="system_nav_link" href="page1.html">ИСЖ</a>
             </li>
             <li class="system_nav_item">
-              <a class ="system_nav_link" href="page3.html">Вет.мониторинг</a>
+              <a class ="system_nav_link" href="page3.html">VetMonitoring</a>
             </li>
             <li class="system_nav_item">
               <a class ="system_nav_link" href="page6.html">Bolzhau</a>
