--- a/index.kz.html
+++ b/index.kz.html
@@ -149,7 +149,7 @@
               <a class ="system_nav_link" href="page1.kz.html">АШЖБ</a>
             </li>
             <li class="system_nav_item">
-              <a class ="system_nav_link" href="page3.kz.html">Вет.мониторинг</a>
+              <a class ="system_nav_link" href="page3.kz.html">VetMonitoring</a>
             </li>
             <li class="system_nav_item">
               <a class ="system_nav_link" href="page6.kz.html">Bolzhau</a>
