--- a/feedback.html
+++ b/feedback.html
@@ -8,7 +8,6 @@
 
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-
   <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
@@ -104,40 +103,54 @@
   </aside>
 
   <main id="main" class="main">
-
+    
     <div class="card">
-
+      <div class="toast bg-success text-white" id="successToast" style="position: absolute; top: 10px; right: 10px; width: 450px;"  data-delay="5000">
+            <div class="toast-header bg-success text-white">
+            <strong class="me-auto">Благодарим за обращение!</strong>
+              <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+            </div>
+            <div class="toast-body">
+            </div>
+          </div>
+          <div id="dangerToast" class="toast bg-danger text-white" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000" style="position: absolute; top: 10px; right: 10px; width: 450px;">
+              <div class="toast-header bg-danger text-white">
+              <strong class="me-auto">Ошибка!</strong>
+              <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+            </div>
+            <div class="toast-body">
+            </div>
+          </div>
             <div class="card-body">
               <img src="assets/img/vetqyzmet_icon_about.svg" class="logo_forms">
-              <h5><b>Обратная связь</b></h5>
-              <form class="row g-2">
+              <h5><b>Обратная связь</b></h5>  
+              <form class="row g-2 needs-validation" id="myform" novalidate>
                 <div class="col-md-9">
                   <label>Фамилия, имя</label>
                   <div class="input-group mb-3">
                   <span class="input-group-text bg-transparent "><i class="bi bi-person-vcard text-primary"></i></span>
-                  <input type="text" class="form-control" placeholder="Ваше Фамилия, имя">
+                  <input required type="text" class="form-control" placeholder="Ваше Фамилия, имя" id="name">
                 </div>
                 </div>
                 <div class="col-md-9">
                   <label>Контактный E-mail</label>
                   <div class="input-group mb-3">
                   <span class="input-group-text bg-transparent" ><i class="bi bi-envelope text-primary"></i></span>
-                  <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Ваш E-mail">
+                  <input required type="email" class="form-control" aria-describedby="emailHelp" placeholder="Ваш E-mail" id="email">
                 </div>
                 </div>
-
                 <div class="col-md-9">
                   <label>Контактный телефон</label>
                   <div class="input-group mb-3 ">
                   <span class="input-group-text bg-transparent" ><i class="bi bi-telephone-fill text-primary"></i></span>
-                  <input type="text" class="form-control"  placeholder="+7...">
+                  <input required type="text" class="form-control"  placeholder="+7(000)000-00-00" id="phone" >
                 </div>
                 </div>
                 <div class="col-md-9">
                   <label>Какую информационную систему Вы использовали? </label>
                   <div class="input-group mb-3">
                   <span class="input-group-text bg-transparent" ><i class="bi bi-question-circle text-primary"></i></span>
-                  <select id="inputState" class="form-select">
+                  <select required id="inputState" class="form-select">
                     <option></option>
                     <option>Идентификация сельскохозяйственных животных</option>
                     <option>Мобильное приложение «VetMobile», для ветеринарного врача</option>
@@ -160,18 +173,13 @@
                 </div>
               <div class="col-9">
                 <input class="form-control" type="file" id="formFile">
+              </div >
+              <div class="col-8 text-center">
+              <button type="submit" class="btn btn-primary" id="myBtn">Отправить</button>
               </div>
-              </form>
-              <br>
-                <div class="button_form text-center">
-                  <button type="submit" class="btn btn-primary">Отправить</button>
-                </div>
               </form>
             </div>
           </div>
-
-</div>
-
   </main>
   <footer id="footer" class="footer">
     <div class="copyright">
@@ -183,10 +191,13 @@
   </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <script src="assets/js/main.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/imask"></script>
+  <script src="assets/js/main.js">
+  </script>
 
 </body>
 
